Hourly scheduled redeploy ca5436d7949b5d4ae09a55a18e6af7a83cee75dc

--- a/apps/account-api/api.html
+++ b/apps/account-api/api.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/account-api/commit/dbc49385780c0bda5855577b91c3f45be1f66311">2 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/account-api/commit/acf9533befb45fd8d338e6ce3946e91aba7f95da">3 Jun 2021</a>
 </div>
 
   <h1 class="page-title">account-api: API documentation</h1>
@@ -896,6 +896,7 @@ end
 </ul>
 <h4 id="response-codes">Response codes</h4>
 <ul>
+<li>403 if the session's level of authentication is too low (see <a href="#level-of-authentication-too-low">error: level of authentication too low</a>)</li>
 <li>401 if the session identifier is invalid</li>
 <li>200 otherwise</li>
 </ul>
@@ -942,6 +943,7 @@ end
 </ul>
 <h4 id="response-codes">Response codes</h4>
 <ul>
+<li>403 if the session's level of authentication is too low (see <a href="#level-of-authentication-too-low">error: level of authentication too low</a>)</li>
 <li>401 if the session identifier is invalid</li>
 <li>200 otherwise</li>
 </ul>
