--- a/apps/content-tagger.html
+++ b/apps/content-tagger.html
@@ -457,7 +457,6 @@
       </ul>
 </ul>
 <h2 id='example-pages-published-by-content-tagger'>Example pages published by content-tagger</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="https://www.gov.uk/transition" class="govuk-link">Brexit</a></li>
       <li><a href="https://www.gov.uk/world/spain" class="govuk-link">UK help and services in Spain</a></li>
       <li><a href="https://www.gov.uk/world/france" class="govuk-link">UK help and services in France</a></li>
       <li><a href="https://www.gov.uk/world/usa" class="govuk-link">UK help and services in USA</a></li>
@@ -467,6 +466,7 @@
       <li><a href="https://www.gov.uk/world/portugal" class="govuk-link">UK help and services in Portugal</a></li>
       <li><a href="https://www.gov.uk/world/switzerland" class="govuk-link">UK help and services in Switzerland</a></li>
       <li><a href="https://www.gov.uk/world/china" class="govuk-link">UK help and services in China</a></li>
+      <li><a href="https://www.gov.uk/world/nigeria" class="govuk-link">UK help and services in Nigeria</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
