--- a/document-types/taxon.html
+++ b/document-types/taxon.html
@@ -361,7 +361,6 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/transition">Brexit</a></li>
 <li><a href="https://www.gov.uk/world/spain">UK help and services in Spain</a></li>
 <li><a href="https://www.gov.uk/world/france">UK help and services in France</a></li>
 <li><a href="https://www.gov.uk/world/usa">UK help and services in USA</a></li>
@@ -371,6 +370,7 @@
 <li><a href="https://www.gov.uk/world/portugal">UK help and services in Portugal</a></li>
 <li><a href="https://www.gov.uk/world/switzerland">UK help and services in Switzerland</a></li>
 <li><a href="https://www.gov.uk/world/china">UK help and services in China</a></li>
+<li><a href="https://www.gov.uk/world/nigeria">UK help and services in Nigeria</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=taxon&amp;count=10">Source query from Search API</a></p>
 
