Hourly scheduled redeploy 9078055dff0887d5800308f95140913d73bee875

--- a/manual/concourse.html
+++ b/manual/concourse.html
@@ -240,6 +240,7 @@ To change pipelines within this Concourse team, you need to be a member of the G
             <li><a href="/manual/vpn.html">GOV.UK and Virtual Private Networks (VPNs)</a></li>
             <li><a href="/manual/environments.html">GOV.UK's environments (integration, staging, production)</a></li>
             <li><a href="/manual/load-testing.html">Load Testing</a></li>
+            <li><a href="/manual/new_instances_fail_to_provision.html">New instances fail to provision</a></li>
             <li><a href="/manual/upgrade-terraform.html">Upgrade Terraform</a></li>
           </ul>
         </div>
