--- a/manual/upgrade-terraform.html
+++ b/manual/upgrade-terraform.html
@@ -283,6 +283,7 @@ when the <code>terraform init</code> command runs, which happens automatically w
             <li><a href="/manual/vpn.html">GOV.UK and Virtual Private Networks (VPNs)</a></li>
             <li><a href="/manual/environments.html">GOV.UK's environments (integration, staging, production)</a></li>
             <li><a href="/manual/load-testing.html">Load Testing</a></li>
+            <li><a href="/manual/new_instances_fail_to_provision.html">New instances fail to provision</a></li>
           </ul>
         </div>
 
