--- a/manual/load-testing.html
+++ b/manual/load-testing.html
@@ -211,6 +211,7 @@ is stored in the <a href="https://github.com/alphagov/govuk-load-testing">govuk-
             <li><a href="/manual/dns.html">Domain Name System (DNS) records</a></li>
             <li><a href="/manual/vpn.html">GOV.UK and Virtual Private Networks (VPNs)</a></li>
             <li><a href="/manual/environments.html">GOV.UK's environments (integration, staging, production)</a></li>
+            <li><a href="/manual/new_instances_fail_to_provision.html">New instances fail to provision</a></li>
             <li><a href="/manual/upgrade-terraform.html">Upgrade Terraform</a></li>
           </ul>
         </div>
