--- a/manual/new_instances_fail_to_provision.html
+++ b/manual/new_instances_fail_to_provision.html
@@ -10,23 +10,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>GOV.UK and Virtual Private Networks (VPNs) - GOV.UK Developer Documentation</title>
+    <title>New instances fail to provision - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/vpn.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/new_instances_fail_to_provision.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="GOV.UK and Virtual Private Networks (VPNs) - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/vpn.html" />
+      <meta name="twitter:title" content="New instances fail to provision - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/new_instances_fail_to_provision.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="GOV.UK and Virtual Private Networks (VPNs)" />
+      <meta property="og:title" content="New instances fail to provision" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/vpn.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/new_instances_fail_to_provision.html" />
 
     
   </head>
@@ -131,17 +131,7 @@
                   <a href='/manual.html' class="toc__back-link govuk-link">&lsaquo; Manual</a>
   <ul>
   <li>
-    <a href="#header"><span>GOV.UK and Virtual Private Networks (VPNs)</span></a>
-    <ul>
-      <li>
-        <a href="#vpn-between-aws-and-ukcloud-for-licensify-civica-payment-status-requests"><span>VPN between AWS and UKCloud for Licensify Civica payment status requests</span></a>
-        <ul>
-          <li>
-            <a href="#troubleshooting-steps"><span>Troubleshooting Steps</span></a>
-          </li>
-        </ul>
-      </li>
-    </ul>
+    <a href="#header"><span>New instances fail to provision</span></a>
   </li>
 </ul>
 
@@ -192,37 +182,22 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/a3eace0bbcc35f30a699b106d244b05a269ba902">3 Jun 2021</a>
 </div>
 
- <h1 id='header'>GOV.UK and Virtual Private Networks (VPNs)</h1> <h2 id='vpn-between-aws-and-ukcloud-for-licensify-civica-payment-status-requests'>VPN between AWS and UKCloud for Licensify Civica payment status requests</h2><p>There&rsquo;s a VPN between AWS Production (only) and UKCloud Production which exists
-only as a workaround for routing certain requests from Licensify to Civica, one
-of Licensify&rsquo;s payment gateways. This is undesirable and <a href="https://trello.com/c/CG5mc7Zi/213-licensify-connection-to-civica-still-goes-via-uk-cloud-and-vpn-from-aws">recorded as
-GOV.UK Tech Debt</a>.</p>
-<p>If this VPN is down:</p>
-
-<ul>
-<li>The <a href="https://alert.production.govuk.digital/cgi-bin/icinga/status.cgi?search_string=vpn.*licensify">check_uk_cloud_vpn_up</a> alert will fire in Icinga.</li>
-<li>Users who are paying for licence applications to certain licencing authorities will still be able to complete their application but the last step of their journey will display a message saying &ldquo;We have received your application, but were unable to confirm payment with the authority.&rdquo; (<a href="https://github.com/alphagov/licensify/blob/master/frontend/app/views/licensing/payments/unknown.scala.html">source</a>)</li>
-<li>The page still gives the user a reference number for their transaction and asks the user to contact the licencing authority to confirm that they have received the payment.</li>
-<li>Payments will still be processed as normal. The only difference is that Licensify is unable to tell the user whether the payment went through or not.</li>
-<li>Only those licencing authorities which use Civica as their payment processor are affected. This is a small but significant minority.</li>
-<li>Licencing authorities who do not use Civica are not affected.</li>
-</ul>
-<h3 id='troubleshooting-steps'>Troubleshooting Steps</h3><p>Troubleshooting steps (aim is to switch off and on the VPN):</p>
-
-<ol>
-<li>Go to Production Skyscape portal, the credentials are in GOV.UK 2ndline Pass under: <code>ukcloud/portal</code>.</li>
-<li>Once you logged in, you have to log into the <code>Production</code> organization by selecting: <code>VMWARE CLOUD</code> and then <code>GOV.UK Production</code>. You will be asked for the password again.</li>
-<li>In the <code>Production</code> organization, go to the <code>GOV.UK Management</code> virtual datacenter.</li>
-<li>Click <code>edges</code> in the left column to bring the list of edges.</li>
-<li>Click on the <code>GOV.UK Management</code> edges in the right main frame and <code>Configure Services</code> above it.</li>
-<li>In the pop-up window, click on <code>VPN</code> in the menu bar and then <code>IPsec VPN Sites</code></li>
-<li>In the list of VPN sites, select <code>UKC Licensify to AWS</code> VPN and click on the edit icon above.</li>
-<li>In the new pop-up window, turn the VPN off by toggling the <code>enable</code> switch and clicking <code>KEEP</code></li>
-<li>The pop-up window will disappear and you need to click <code>save changes</code> in put into effect the VPN being now disabled.</li>
-<li>Wait a few minutes and repeat step 7-9 to re-enable the VPN again.</li>
-</ol>
+ <h1 id='header'>New instances fail to provision</h1> <p>Sometimes, it may happen that a new instance is not provisioned correctly due to
+<code>unattended reboot</code> rebooting the instance before all the init scripts have
+time to run.</p>
+<p>You may diagnose this issue by looking at the <code>system logs</code> in AWS console
+(select the failed instance in EC2 console -&gt; <code>Actions</code> -&gt;
+<code>Monitor and troubleshoot</code> -&gt; <code>Get system log</code>) and seeing whether all
+init scripts have been run.</p>
+<p>This issue is more severe in Staging due to <code>unattended reboot</code> checking every
+5 minutes at all hours of the day (see <a href="https://github.com/alphagov/govuk-puppet/commit/fd1a291ca69bae254b4b0efacec13f4228939496">here</a>)
+rather than between <a href="https://github.com/alphagov/govuk-puppet/blob/e76b397c3e570ba807791befbf61758100e143d8/hieradata_aws/common.yaml#L1521">0-5</a> for Integration and Production.</p>
+<p>You could temporarily disable <code>unattended reboot</code> by adding this to the relevant hiera:
+<code>govuk_unattended_reboot::enabled: false</code>, deploy the branch of Puppet and create new
+instances again.</p>
 
 
   <div class='related-content'>
@@ -237,9 +212,9 @@ GOV.UK Tech Debt</a>.</p>
             <li><a href="/manual/govuk-app-domain-handling-during-migration.html">app_domain handling in GOV.UK during migration to AWS</a></li>
             <li><a href="/manual/concourse.html">Concourse</a></li>
             <li><a href="/manual/dns.html">Domain Name System (DNS) records</a></li>
+            <li><a href="/manual/vpn.html">GOV.UK and Virtual Private Networks (VPNs)</a></li>
             <li><a href="/manual/environments.html">GOV.UK's environments (integration, staging, production)</a></li>
             <li><a href="/manual/load-testing.html">Load Testing</a></li>
-            <li><a href="/manual/new_instances_fail_to_provision.html">New instances fail to provision</a></li>
             <li><a href="/manual/upgrade-terraform.html">Upgrade Terraform</a></li>
           </ul>
         </div>
@@ -275,8 +250,8 @@ GOV.UK Tech Debt</a>.</p>
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/vpn.html.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'GOV.UK%20and%20Virtual%20Private%20Networks%20(VPNs)'&amp;body=Problem%20with%20'GOV.UK%20and%20Virtual%20Private%20Networks%20(VPNs)'%20(https://docs.publishing.service.gov.uk/manual/vpn.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/new_instances_fail_to_provision.html.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'New%20instances%20fail%20to%20provision'&amp;body=Problem%20with%20'New%20instances%20fail%20to%20provision'%20(https://docs.publishing.service.gov.uk/manual/new_instances_fail_to_provision.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
