--- a/manual/ruby.html
+++ b/manual/ruby.html
@@ -272,6 +272,7 @@ applications are using a specific version of Ruby on GOV.UK. For example:</p>
             <li><a href="/manual/vpn.html">GOV.UK and Virtual Private Networks (VPNs)</a></li>
             <li><a href="/manual/environments.html">GOV.UK's environments (integration, staging, production)</a></li>
             <li><a href="/manual/load-testing.html">Load Testing</a></li>
+            <li><a href="/manual/new_instances_fail_to_provision.html">New instances fail to provision</a></li>
             <li><a href="/manual/upgrade-terraform.html">Upgrade Terraform</a></li>
           </ul>
         </div>
