--- a/manual/reprovision.html
+++ b/manual/reprovision.html
@@ -136,6 +136,9 @@
       <li>
         <a href="#aws"><span>AWS</span></a>
       </li>
+      <li>
+        <a href="#troubleshooting"><span>Troubleshooting</span></a>
+      </li>
     </ul>
   </li>
 </ul>
@@ -186,15 +189,8 @@
 </div>
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/c6a346b941f8de2d7fab0b2cbbc25a26ffe83012">13 Oct 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/c254551168a88dfba0517ed93f5eecc1d7255faa">3 Jun 2021</a>
 </div>
 
  <h1 id='header'>Reprovision a machine</h1> <p>Make sure you are aware what the consequences will be of removing a
@@ -207,6 +203,10 @@ machine will result in downtime.</p>
 <li>Locate the instance and confirm it&rsquo;s the correct one by either instance ID or private IP address</li>
 <li>Select Terminate from the Actions -&gt; Instance State menu</li>
 <li>The AWS Auto Scaling Group will reprovision the instance automatically</li>
+</ol>
+<h2 id='troubleshooting'>Troubleshooting</h2>
+<ol>
+<li>If you  have issues when reprovisioning new instances, see <a href="/manual/new-instances-fail-to-provision.html">here</a></li>
 </ol>
 
 
@@ -225,7 +225,7 @@ machine will result in downtime.</p>
             <li><a href="/manual/vpn.html">GOV.UK and Virtual Private Networks (VPNs)</a></li>
             <li><a href="/manual/environments.html">GOV.UK's environments (integration, staging, production)</a></li>
             <li><a href="/manual/load-testing.html">Load Testing</a></li>
-            <li><a href="/manual/new_instances_fail_to_provision.html">New instances fail to provision</a></li>
+            <li><a href="/manual/new-instances-fail-to-provision.html">New instances fail to provision</a></li>
             <li><a href="/manual/upgrade-terraform.html">Upgrade Terraform</a></li>
           </ul>
         </div>
