--- a/apps/static/humans.html
+++ b/apps/static/humans.html
@@ -363,6 +363,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/static/commit/e58ceebbf2b3adff5d9416893f1c4f2eff1fb282">3 Dec 2020</a>
 </div>
