Hourly scheduled redeploy 4ad307ac62d1febd25533c518bf582d3126dd67f

--- a/apps/govuk-docker/how-tos.html
+++ b/apps/govuk-docker/how-tos.html
@@ -363,6 +363,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-docker/commit/55ab65f0dd33c3452a7145205a8653ce1d83b5f2">3 Dec 2020</a>
 </div>
