--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/209290.ru">Укрепление свободы вероисповедания в Республике Казахстан</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--36">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/214930.pt">UKTI promove competição de Tecnologia e Inovação no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/international-day-against-homophobia-and-transphobia--2">International Day Against Homophobia and Transphobia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/287200.es">Concurso &ldquo;200 días para el Mundial de Rugby 2015&rdquo;</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186354.it">Il Regno Unito lancia un piano d&#39;azione per l&#39;impresa ed i diritti umani</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-and-consulate-will-be-closed--2">British Embassy Santiago and Consulate will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--21">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/277623.zh-tw">簽證中心聖誕節與新年假期閉館時間</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/173029.lt">Lietuvos kariai tarnaus JK vadovaujamoje ES kovinėje grupėje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210686.zh-tw">台英組織簽訂合作，開放資料邁向國際</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queens-birthday-party-held-in-yerevan">Queen&rsquo;s Birthday Party held in Yerevan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/boat-racing-festival-british-embassy-vientiane-closure--2">Boat Racing Festival - British Embassy Vientiane Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/solidarity-with-the-syrian-people">Solidarity with the Syrian People</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--5">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
