Hourly scheduled redeploy 87d4f9e8559a821722ce951dbf7749b51d860df0

--- a/manual/request-fastly-tls-certificate.html
+++ b/manual/request-fastly-tls-certificate.html
@@ -181,22 +181,15 @@
 </div>
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/26ded2ec185d1fd186a122547ec696ce5873ecca">5 Nov 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/370e67bc64e5b44ad24391c17debaecc7f47361a">3 Jun 2021</a>
 </div>
 
  <h1 id='header'>Request Fastly TLS certificate</h1> <p>When transitioning HTTPS domains, these are the steps to request a TLS
 certificate from Fastly.</p>
 
 <ol>
-<li><p>Use the 2nd line account to login to Fastly.</p></li>
+<li><p>Login to Fastly. If you need access, speak to a member of the senior tech team.</p></li>
 <li><p>Go to Configure &gt; Switch services</p></li>
 <li><p>Select “Production Bouncer” and search for the domain</p></li>
 </ol>
