--- a/apps/mapit/importing-data.html
+++ b/apps/mapit/importing-data.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/mapit/commit/32b9e43c9d4c2e30a7e5aaca907a6279a94bab02">3 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/mapit/commit/7905f6d195446c15e4d30397866b5bc91dd64550">4 Jun 2021</a>
 </div>
 
   <h1 class="page-title">mapit: MapIt - import postcode and boundary data</h1>
@@ -673,6 +673,11 @@ to Local Links Manager. This step can be skipped if there are no new authorities
 <li>
 <p>Run <a href="https://deploy.blue.staging.govuk.digital/job/run-rake-task/parambuild/?TARGET_APPLICATION=local-links-manager&amp;MACHINE_CLASS=backend&amp;RAKE_TASK=local_authority:update_homepage%5Bgovuk-slug%2Chttps%3A%2F%2Fwww.website.gov.uk%2F%5D">a Rake task</a> to add the homepage URL for each local authority that has been added.</p>
 <pre><code>rake local_authority:update_homepage[govuk-slug,https://www.website.gov.uk/]
+</code></pre>
+</li>
+<li>
+<p>Run <a href="https://deploy.blue.staging.govuk.digital/job/run-rake-task/parambuild/?TARGET_APPLICATION=local-links-manager&amp;MACHINE_CLASS=backend&amp;RAKE_TASK=import:missing_links">a Rake task</a> to add the service links for the new local authorities.</p>
+<pre><code>rake import:missing_links
 </code></pre>
 </li>
 </ol>
