Hourly scheduled redeploy faabf3ecceed0443db1d5243feecfd6d8ca4b0f8

--- a/manual.html
+++ b/manual.html
@@ -181,6 +181,11 @@
           </a>
         </li>
         <li>
+          <a href="#data-community-documentation">
+            <span>Data Community Documentation</span>
+          </a>
+        </li>
+        <li>
           <a href="#data-gov-uk">
             <span>data.gov.uk</span>
           </a>
@@ -459,6 +464,13 @@
     <ul>
         <li><a href="/manual/cookie-consent-on-govuk.html">Cookie consent on GOV.UK</a></li>
         <li><a href="/manual/cookies-and-sessions-in-frontend-apps.html">Cookies and sessions in GOV.UK frontend apps</a></li>
+    </ul>
+  <h2 id='data-community-documentation'>Data Community Documentation</h2>
+
+    <h3>How to...</h3>
+    <ul>
+        <li><a href="/manual/view-extract-feedback-data-bigquery.html">View or extract feedback data in BigQuery</a></li>
+        <li><a href="/manual/zendesk-smartsurvey-feedback-data-pipeline.html">Zendesk and SmartSurvey feedback data pipeline</a></li>
     </ul>
   <h2 id='data-gov-uk'>data.gov.uk</h2>
 
