Hourly scheduled redeploy faabf3ecceed0443db1d5243feecfd6d8ca4b0f8

--- a/document-types/employment_tribunal_decision.html
+++ b/document-types/employment_tribunal_decision.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: employment_tribunal_decision</h1>
 
-  <p>There are <strong>76011</strong> pages with document type
+  <p>There are <strong>76060</strong> pages with document type
 &lsquo;employment_tribunal_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -365,12 +365,12 @@
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-m-lloyd-v-jordanna-nichols-ltd-1802058-slash-2020">Ms M Lloyd v Jordanna Nichols Ltd: 1802058/2020</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-b-oakley-v-ee-ltd-1602392-slash-2019">Ms B Oakley v EE Ltd: 1602392/2019</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-y-omar-v-brampton-manor-trust-3201876-slash-2019">Ms Y Omar v Brampton Manor Trust: 3201876/2019</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-s-perera-v-zenith-bank-uk-ltd-2202012-slash-2019">Mr S Perera v Zenith Bank (UK) Ltd: 2202012/2019</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mrs-m-caroll-cliffe-v-pembrey-and-burry-port-town-council-1600580-2019">Mrs M Caroll-Cliffe v Pembrey and Burry Port Town Council: 1600580/2019</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-m-kilby-v-department-for-work-and-pensions-1805322-slash-2020">Ms M Kilby v Department for Work and Pensions: 1805322/2020</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-d-rodgers-v-leeds-laser-cutting-ltd-1803829-slash-2020">Mr D Rodgers v Leeds Laser Cutting Ltd: 1803829/2020</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-j-locke-v-nottinghamshire-county-council-2601543-slash-2018">Ms J Locke v Nottinghamshire County Council: 2601543/2018</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/dr-m-velayati-v-al-maktoum-college-of-higher-education-4102154-slash-2020">Dr M Velayati v Al-Maktoum College of Higher Education: 4102154/2020</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-a-walne-v-royal-mail-group-ltd-3332202-slash-2018">Mr A Walne v Royal Mail Group Ltd: 3332202/2018</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-d-rodgers-v-leeds-laser-cutting-ltd-1803829-slash-2020">Mr D Rodgers v Leeds Laser Cutting Ltd: 1803829/2020</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-a-gillespie-v-guys-and-st-thomas-nhs-foundation-trust-2300006-slash-2018">Ms A Gillespie v Guy’s and St Thomas’ NHS Foundation Trust: 2300006/2018</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=employment_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
