--- a/document-types/oral_statement.html
+++ b/document-types/oral_statement.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/government/speeches/statement-on-the-ockenden-review-of-maternity-services">Statement on the Ockenden review of maternity services</a></li>
 <li><a href="https://www.gov.uk/government/speeches/nhs-and-social-care-funding">NHS and social care funding</a></li>
 <li><a href="https://www.gov.uk/government/speeches/pm-house-of-commons-statement-on-covid-12-may-2021">PM House of Commons Statement on COVID: 12 May 2021</a></li>
-<li><a href="https://www.gov.uk/government/speeches/pm-statement-on-covid-19-winter-plan-23-november-2020">PM statement on COVID-19 Winter Plan: 23 November 2020</a></li>
+<li><a href="https://www.gov.uk/government/speeches/update-on-new-social-distancing-rules">Update on new social distancing rules</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=oral_statement&amp;count=10">Source query from Search API</a></p>
 
