--- a/document-types/residential_property_tribunal_decision.html
+++ b/document-types/residential_property_tribunal_decision.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: residential_property_tribunal_decision</h1>
 
-  <p>There are <strong>4707</strong> pages with document type
+  <p>There are <strong>4709</strong> pages with document type
 &lsquo;residential_property_tribunal_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/10-bowden-house-rainhill-way-london-e3-3hz-lon-00bg-lsc-2019-0224">10 Bowden House, Rainhill Way, London E3 3HZ: LON/00BG/LSC/2019/0224</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-6-dennington-park-mansions-269-west-end-lane-london-nw6-1qr-lon-slash-00ag-slash-f77-slash-2021-slash-0149">Flat 6 Dennington Park Mansions, 269 West End Lane, London, NW6 1QR : LON/00AG/F77/2021/0149</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-60-trinity-court-254-grays-in-road-london-wc1x-8jz-lon-slash-00ag-slash-olr-slash-2020-slash-0870">Flat 60, Trinity Court, 254 Gray’s In Road,  London, WC1X 8JZ: LON/00AG/OLR/2020/0870</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/7b-the-market-place-falloden-way-london-nw11-6lb-lon-slash-00ac-slash-olr-slash-2020-slash-0526">7b The Market Place, Falloden Way, London NW11 6LB : LON/00AC/OLR/2020/0526</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/10-bowden-house-rainhill-way-london-e3-3hz-lon-00bg-lsc-2019-0224">10 Bowden House, Rainhill Way, London E3 3HZ: LON/00BG/LSC/2019/0224</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-b-2-otley-road-canning-town-london-e16-3jt-lon-slash-00bb-slash-f77-slash-2021-slash-0101">Flat B, 2 Otley Road, Canning Town, London, E16 3JT : LON/00BB/F77/2021/0101</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-25-hill-court-hanger-lane-london-w5-3df-lon-slash-00aj-slash-f77-slash-2021-slash-0145">Flat 25 Hill Court, Hanger Lane, London, W5 3DF : LON/00AJ/F77/2021/0145</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/six-blocks-of-flats-at-lawrence-wharf-rotherhithe-street-london-se16-lon-slash-00be-slash-oce-slash-2020-slash-002528-2930-31-and-109">Six blocks of flats at Lawrence Wharf, Rotherhithe Street, London SE16: LON/00BE/OCE/2020/0025,28,29,30,31&amp;109</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/6-wrendale-court-gosforth-newcastle-upon-tyne-ne3-1tf-man-slash-00cj-slash-lsc-slash-2019-slash-0037">6 Wrendale Court, Gosforth, Newcastle upon Tyne, NE3 1TF:MAN/00CJ/LSC/2019/0037</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/2a-wildfell-road-london-se6-4hu-ref-lon-slash-00be-slash-htc-slash-2020-slash-0017">2a Wildfell Road, London, SE6 4HU - REF: LON/00BE/HTC/2020/0017 </a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/3-luton-road-walthamstow-london-e17-5ln-lon-slash-00bh-slash-htc-slash-2020-slash-0010">3 Luton Road, Walthamstow, London E17 5LN: LON/00BH/HTC/2020/0010</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/saltmarshe-castle-park-stourport-road-bromyard-herefordshire-hr7-4pn-bir-00ga-php-2019-0001">Saltmarshe Castle Park, Stourport Road, Bromyard, Herefordshire HR7 4PN: BIR/00GA/PHP/2019/0001</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/leonard-hackett-court-st-winifreds-road-bournemouth-bh2-6pr-chi-00hn-lvt-2019-0007">Leonard Hackett Court, St Winifreds Road, Bournemouth, BH2 6PR: CHI/00HN/LVT/2019/0007</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=residential_property_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
