--- a/apps/specialist-publisher.html
+++ b/apps/specialist-publisher.html
@@ -478,10 +478,10 @@
       <li><a href="https://www.gov.uk/drug-device-alerts" class="govuk-link">Alerts and recalls for drugs and medical devices</a></li>
       <li><a href="https://www.gov.uk/export-health-certificates" class="govuk-link">Find an export health certificate</a></li>
       <li><a href="https://www.gov.uk/cma-cases" class="govuk-link">Competition and Markets Authority cases</a></li>
-      <li><a href="https://www.gov.uk/drug-safety-update/levothyroxine-new-prescribing-advice-for-patients-who-experience-symptoms-on-switching-between-different-levothyroxine-products" class="govuk-link">Levothyroxine: new prescribing advice for patients who experience symptoms on switching between different levothyroxine products</a></li>
       <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies" class="govuk-link">UK Market Conformity Assessment Bodies</a></li>
-      <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-17-to-21-may-2021" class="govuk-link">Field Safety Notices: 17 to 21 May 2021</a></li>
       <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-24-to-28-may-2021" class="govuk-link">Field Safety Notices: 24 to 28 May 2021</a></li>
+      <li><a href="https://www.gov.uk/drug-safety-update/levothyroxine-new-prescribing-advice-for-patients-who-experience-symptoms-on-switching-between-different-levothyroxine-products" class="govuk-link">Levothyroxine: new prescribing advice for patients who experience symptoms on switching between different levothyroxine products</a></li>
+      <li><a href="https://www.gov.uk/aaib-reports" class="govuk-link">Air Accidents Investigation Branch reports</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
