--- a/apps/travel-advice-publisher.html
+++ b/apps/travel-advice-publisher.html
@@ -463,7 +463,7 @@
       <li><a href="https://www.gov.uk/foreign-travel-advice/usa" class="govuk-link">USA travel advice</a></li>
       <li><a href="https://www.gov.uk/foreign-travel-advice/italy" class="govuk-link">Italy travel advice</a></li>
       <li><a href="https://www.gov.uk/foreign-travel-advice/romania" class="govuk-link">Romania travel advice</a></li>
-      <li><a href="https://www.gov.uk/foreign-travel-advice/poland" class="govuk-link">Poland travel advice</a></li>
+      <li><a href="https://www.gov.uk/foreign-travel-advice/turkey" class="govuk-link">Turkey travel advice</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
