--- a/document-types/case_study.html
+++ b/document-types/case_study.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: case_study</h1>
 
-  <p>There are <strong>1884</strong> pages with document type
+  <p>There are <strong>1885</strong> pages with document type
 &lsquo;case_study&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -367,10 +367,10 @@
 <li><a href="https://www.gov.uk/government/case-studies/optimising-site-end-states">Optimising Site End States</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/quality-and-continuous-improvement-first-generation-magnox-storage-pond-fgmsp">Quality and Continuous Improvement - First Generation Magnox Storage Pond (FGMSP)</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/timing-of-the-magnox-reactor-decommissioning-strategy">Timing of the Magnox Reactor Decommissioning Strategy</a></li>
+<li><a href="https://www.gov.uk/government/case-studies/how-the-dvla-deployed-a-chatbot-and-improved-customer-engagement">How the DVLA deployed a chatbot and improved customer engagement</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/exercise-purple-lumi">Exercise Purple Lumi</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/export-of-high-enriched-uranium-in-support-of-medical-isotope-production">Export of High Enriched Uranium in Support of Medical Isotope Production</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/higher-activity-waste-package-records">Higher Activity Waste Package Records</a></li>
-<li><a href="https://www.gov.uk/government/case-studies/innovation">Innovation</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=case_study&amp;count=10">Source query from Search API</a></p>
 
