--- a/document-types/cma_case.html
+++ b/document-types/cma_case.html
@@ -363,14 +363,14 @@
 <ul>
 <li><a href="https://www.gov.uk/cma-cases/covid-19-cancellations-package-holidays">COVID-19 cancellations: package holidays</a></li>
 <li><a href="https://www.gov.uk/cma-cases/misleading-environmental-claims">Misleading environmental claims</a></li>
-<li><a href="https://www.gov.uk/cma-cases/adevinta-ebay-merger-inquiry">Adevinta / eBay merger inquiry</a></li>
 <li><a href="https://www.gov.uk/cma-cases/fnz-gbst-merger-inquiry">FNZ / GBST merger inquiry</a></li>
+<li><a href="https://www.gov.uk/cma-cases/adevinta-ebay-merger-inquiry">Adevinta / eBay merger inquiry</a></li>
 <li><a href="https://www.gov.uk/cma-cases/electric-vehicle-charging-market-study">Electric vehicle charging market study</a></li>
 <li><a href="https://www.gov.uk/cma-cases/astrazeneca-slash-alexion-pharmaceuticals-merger-inquiry">AstraZeneca / Alexion Pharmaceuticals merger inquiry </a></li>
 <li><a href="https://www.gov.uk/cma-cases/digital-markets-taskforce">Digital Markets Taskforce</a></li>
 <li><a href="https://www.gov.uk/cma-cases/online-platforms-and-digital-advertising-market-study">Online platforms and digital advertising market study</a></li>
-<li><a href="https://www.gov.uk/cma-cases/childrens-social-care-study">Children&rsquo;s social care study</a></li>
 <li><a href="https://www.gov.uk/cma-cases/veolia-slash-suez-merger-inquiry">Veolia / Suez merger inquiry</a></li>
+<li><a href="https://www.gov.uk/cma-cases/facebook-inc-giphy-inc-merger-inquiry">Facebook, Inc / Giphy, Inc merger inquiry</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=cma_case&amp;count=10">Source query from Search API</a></p>
 
