--- a/document-types/decision.html
+++ b/document-types/decision.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: decision</h1>
 
-  <p>There are <strong>7152</strong> pages with document type
+  <p>There are <strong>7153</strong> pages with document type
 &lsquo;decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -365,13 +365,13 @@
 <li><a href="https://www.gov.uk/government/publications/regulatory-approval-of-pfizer-biontech-vaccine-for-covid-19">Regulatory approval of Pfizer/BioNTech vaccine for COVID-19</a></li>
 <li><a href="https://www.gov.uk/government/publications/regulatory-approval-of-covid-19-vaccine-astrazeneca">Regulatory approval of COVID-19 Vaccine AstraZeneca</a></li>
 <li><a href="https://www.gov.uk/government/publications/regulatory-approval-of-covid-19-vaccine-moderna">Regulatory approval of COVID-19 Vaccine Moderna</a></li>
-<li><a href="https://www.gov.uk/government/publications/suspended-licences-for-manufacturers-and-wholesalers-of-medicines">Suspended and revoked licences and registrations for manufacturers and wholesalers of medicines and ingredients</a></li>
 <li><a href="https://www.gov.uk/government/publications/regulatory-approval-of-covid-19-vaccine-janssen">Regulatory approval of COVID-19 Vaccine Janssen</a></li>
+<li><a href="https://www.gov.uk/government/publications/suspended-licences-for-manufacturers-and-wholesalers-of-medicines">Suspended and revoked licences and registrations for manufacturers and wholesalers of medicines and ingredients</a></li>
 <li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-james-butterworth-smith">Teacher misconduct panel outcome: Mr James Butterworth-Smith</a></li>
 <li><a href="https://www.gov.uk/government/publications/regulatory-judgements-and-regulatory-notices">Regulatory judgements and notices, and gradings under review</a></li>
+<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-ms-genevieve-hyde">Teacher misconduct panel outcome: Ms Genevieve Hyde</a></li>
 <li><a href="https://www.gov.uk/government/publications/human-and-veterinary-medicines-register-of-licensed-wholesale-distribution-sites">Human and veterinary medicines: register of licensed wholesale distribution sites</a></li>
-<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-christopher-aitken">Teacher misconduct panel outcome: Mr Christopher Aitken</a></li>
-<li><a href="https://www.gov.uk/government/publications/medical-devices-given-exceptional-use-authorisations-during-the-covid-19-pandemic">Medical devices given exceptional use authorisations during the COVID-19 pandemic</a></li>
+<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-peter-gittins">Teacher misconduct panel outcome: Mr Peter Gittins</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=decision&amp;count=10">Source query from Search API</a></p>
 
