--- a/document-types/fatality_notice.html
+++ b/document-types/fatality_notice.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/government/fatalities/lance-corporal-robert-martin-richards-rm-dies-of-wounds-sustained-in-helmand">Lance Corporal Robert Martin Richards RM dies of wounds sustained in Helmand</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/lance-corporal-kieron-hill-killed-in-afghanistan">Lance Corporal Kieron Hill killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/sergeant-simon-alexander-hamilton-jewell">Six Royal Military Policemen killed in Iraq</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/lance-corporal-martin-joseph-gill-royal-marines-killed-in-afghanistan">Lance Corporal Martin Joseph Gill, Royal Marines, killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/marine-thomas-curry-killed-in-afghanistan">Marine Thomas Curry killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/private-chris-gray-killed-in-afghanistan">Private Chris Gray killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/five-personnel-in-basra-helicopter-crash-named">Five personnel in Basra helicopter crash named</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=fatality_notice&amp;count=10">Source query from Search API</a></p>
 
