--- a/document-types/protected_food_drink_name.html
+++ b/document-types/protected_food_drink_name.html
@@ -363,12 +363,12 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/protected-food-drink-names/scotch-whisky">Scotch Whisky</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/west-country-farmhouse-cheddar-cheese">West Country Farmhouse Cheddar Cheese</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/jersey-royal-potatoes">Jersey Royal Potatoes</a></li>
+<li><a href="https://www.gov.uk/protected-food-drink-names/lanzarote">Lanzarote</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/ayrshire-new-potatoes-slash-ayrshire-earlies">Ayrshire New Potatoes / Ayrshire Earlies</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/cambrian-mountains-lamb">Cambrian Mountains Lamb </a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/kephalonia-slash-kefalonia">Κεφαλονιά / Kefalonia</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/cornish-pasty">Cornish Pasty</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/irish-cream">Irish Cream</a></li>
-<li><a href="https://www.gov.uk/protected-food-drink-names/london-cure-smoked-salmon">London Cure Smoked Salmon</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=protected_food_drink_name&amp;count=10">Source query from Search API</a></p>
 
