--- a/document-types/research.html
+++ b/document-types/research.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/publications/the-national-minimum-wage-in-2020">The National Minimum Wage in 2020</a></li>
 <li><a href="https://www.gov.uk/government/publications/covid-19-vaccine-surveillance-report">COVID-19 vaccine surveillance reports</a></li>
 <li><a href="https://www.gov.uk/government/publications/greenhouse-gas-reporting-conversion-factors-2020">Greenhouse gas reporting: conversion factors 2020</a></li>
-<li><a href="https://www.gov.uk/government/publications/navigating-the-labyrinth">Navigating the labyrinth</a></li>
+<li><a href="https://www.gov.uk/government/publications/investigation-of-sars-cov-2-variants-of-concern-variant-risk-assessments">Investigation of SARS-CoV-2 variants of concern: variant risk assessments</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=research&amp;count=10">Source query from Search API</a></p>
 
