--- a/document-types/service_standard_report.html
+++ b/document-types/service_standard_report.html
@@ -367,10 +367,10 @@
 <li><a href="https://www.gov.uk/service-standard-reports/get-an-annual-mot-reminder-beta-reassessment">Get an annual MOT reminder - beta reassessment</a></li>
 <li><a href="https://www.gov.uk/service-standard-reports/report-mot-fraud-motreminders-beta-assessment">Report MOT fraud/MOTreminders beta assessment</a></li>
 <li><a href="https://www.gov.uk/service-standard-reports/apply-for-a-maternity-exemption-certificate-beta-assessment">Apply for a maternity exemption certificate beta assessment</a></li>
-<li><a href="https://www.gov.uk/service-standard-reports/file-your-confirmation-statement-alpha-assessment-report">File Your Confirmation Statement Alpha Assessment Report</a></li>
+<li><a href="https://www.gov.uk/service-standard-reports/commercial-vehicle-service-alpha">Commercial vehicle service - alpha</a></li>
 <li><a href="https://www.gov.uk/service-standard-reports/drone-registration-and-education-service-beta-assessment-report">Drone registration and education service beta assessment report</a></li>
-<li><a href="https://www.gov.uk/service-standard-reports/driver-examiner-service-beta-assessment-report">Driver examiner service beta assessment report</a></li>
-<li><a href="https://www.gov.uk/service-standard-reports/driver-examiner-service-alpha-assessment">Driver examiner service alpha assessment</a></li>
+<li><a href="https://www.gov.uk/service-standard-reports/file-your-confirmation-statement-alpha-assessment-report">File Your Confirmation Statement Alpha Assessment Report</a></li>
+<li><a href="https://www.gov.uk/service-standard-reports/apply-for-a-budgeting-loan">Apply for a Budgeting Loan - Beta Assessment</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=service_standard_report&amp;count=10">Source query from Search API</a></p>
 
