--- a/manual/alerts/low-available-disk-space.html
+++ b/manual/alerts/low-available-disk-space.html
@@ -178,6 +178,13 @@
 
     
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/b4f3f7ea8dbad62455ab7a4ce03a375d1063690c">8 Dec 2020</a>
 </div>
